@startuml

skinparam classAttributeIconSize 0
hide empty attributes

package "<<aggregate>> Figure" {
    class Figure <<entity>> <<root>> {
        - <<VO>> Description
    }

    class FigureCode <<value object>> {
    }

    enum FigureType <<value object>> {
    }

    class FigureVersion <<value object>> {
    }

    class DSL <<entity>> {
        - <<VO>> Description
    }

    class DSLId <<value object>> {
    }

    class DSLVersion <<value object>> {
    }

    Figure --> "1" FigureCode
    Figure --> "1" FigureType
    Figure --> "1" FigureVersion
    Figure --> "1" DSL
    DSL --> "1" DSLId
    DSL --> "1" DSLVersion
}

package "<<aggregate>> Customer" {
    class Customer <<entity>> <<root>> {
    }

    enum CustomerState <<value object>> {
    }

    enum CustomerType <<value object>> {
    }

    class Name <<value object>> {
    }

    class VAT <<value object>> {
    }

    class Address <<value object>> {
    }

    Customer --> "1" VAT
    Customer --> "1" Address
    Customer --> "1" CustomerState
    Customer --> "1" CustomerType
    Customer --> "1" Name
}

package "<<aggregate>> FigureCategory" {
    class FigureCategory <<entity>> <<root>> {
        -boolean : active
    }

    class Designation <<value object>> {
    }

    class Description <<entity>> {
    }

    FigureCategory --> "1" Designation
    FigureCategory --> "1" Description
}

Figure "*" --> "0..1" Customer : exclusive to
Figure "*" --> "1" FigureCategory : categories

@enduml